Fix for lazyloading of images on IE11

--- a/client/styles/cards/_caption.sass
+++ b/client/styles/cards/_caption.sass
@@ -26,7 +26,9 @@
 .media__image
 	display: block
 	opacity: 0
+	height: 0
 	+transitionWithProperties(opacity)
 
 .media__image--loaded
 	opacity: 1
+	height: auto
